# banking-es

./: .env  Cargo.toml  docker-compose.yml
migrations/: 001_create_events_table.sql  002_create_accounts_table.sql  003_create_transactions_table.sql
src/: lib.rs  main.rs
src/application/: handlers.rs  mod.rs  services.rs
src/application/tests/: command_handler_tests.rs  common_mocks.rs  mod.rs  query_handler_tests.rs
src/domain/: account.rs  mod.rs
src/domain/tests/: account_tests.rs  mod.rs
src/infrastructure/: cache.rs  event_store.rs  mod.rs  projections.rs  redis_abstraction.rs  repository.rs
src/web/: handlers.rs  routes.rs
tests/: redis_cache_integration.rs
